# arche

./: .env.example  .gitignore  AGENTS.md  AI_POLICY.md  CONTRIBUTING.md  LICENSING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: arche-core-python.instructions.md  detection-layer.instructions.md  onboarding.instructions.md  policy-and-statutes.instructions.md  release-arche-core.instructions.md  repo-workflow.instructions.md  signing-and-credentials.instructions.md  testing.instructions.md
.github/prompts/: bugfix.prompt.md  new-detector.prompt.md  new-feature.prompt.md  new-jurisdiction.prompt.md  refactor-safe.prompt.md  release-arche-core.prompt.md  sign-workflow.prompt.md  statute-mapping.prompt.md
.github/workflows/: arche-core-budget.yml  arche-core-tests.yml  docs-build.yml  docs-deploy.yml  names_ingest.yml  names_publish_hf.yml  names_validate.yml
datasets/: DATACARD.md  DATASET_LICENSE.md  README.md  STATISTICS.md  __init__.py  build_african_names.py  export_hf.py  names_pipeline.py
datasets/contributions/: LABELING_GUIDE.md  README.md  benin_edo_names.csv  sample_curated_contribution.csv
datasets/data/: african_names_lexicon_v1.csv  african_names_lexicon_v1.jsonl  african_names_unique_v1.csv  african_names_unique_v1.jsonl  african_naming_equivalences.csv  african_naming_equivalences.jsonl  african_naming_equivalences.parquet  african_naming_equivalences_enriched.csv  african_naming_equivalences_enriched.jsonl  dataset_stats_v1.json
datasets/name_equivalences/: cross_linguistic.yaml  east_african.yaml  north_african.yaml  pan_islamic.yaml  southern_african.yaml  (+1 more)
docs-site/: mkdocs.yml
examples/: 01_pipeline_ndpa.py  02_sign_share_extract.py  03_dsar_workflow.py  04_sd_jwt_credential.py  05_audit_log.py  06_doc_pipeline.py  README.md  identity_knowledge_graph.py
(+53 files in other folders)
